tests/fixtures/invalid/float_compare_bytes.py
# Cannot compare Float with Bytes using <
x: bool = 1.0 < b"hello"
